# wrestlegame

./: .gitignore  AGENTS.md  README.md  app.py  main.md  mkdocs.yml  plan.md  prd.md  prd1.md  pyproject.toml
.github/workflows/: tests.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/templates/commands/: README.md  plan.md  spec.md  tasks.md
data/: match_types.json  wrestlers.json
docs/: api.md  architecture.md  index.md  simulation.md  testing.md  ui-flow.md
docs/api/: app.md  domain.md  index.md  simulation.md  ui.md
domain/: __init__.py  booking.py  match_types.py  models.py  roster.py
prd/: main.md
sim/: __init__.py  engine.py  rng.py
slices/: vertical-slice-1.md  vertical-slice-2.md
specs/001-vertical-slice/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-vertical-slice/checklists/: requirements.md
specs/001-vertical-slice/contracts/: openapi.yaml
tests/: test_bounds.py  test_determinism.py  test_keyboard_navigation.py  test_match_type_modifiers.py  test_match_types.py  test_roster_loading.py  test_selector.py  test_simulation.py  test_ui_flow.py
tests/domain/: test_booking.py  test_models.py  test_roster.py
tests/sim/: test_engine.py  test_rng.py
ui/: __init__.py  confirm.py  hub.py  match_type_selector.py  results.py  selector.py  simulating.py  state.py  styles.tcss
