[project]
name = "wrestledream"
version = "0.1.0"
description = "WrestleGM vertical slice prototype"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.54.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
